@@ -34,27 +34,61 @@ require_once(PATH_tslib . 'class.tslib_pibase.php');
 class user_buechertransport extends tslib_pibase {
 
 	/**
-	 * Returns a string of all provinces 
+	 * Returns a menu-string/array of all provinces 
 	 *
 	 * @param $content
 	 * @param $conf
+	 * @return array the new array
 	 */
-	public function provinces($content = '', $conf = array()) {
+	// public function provinces($content = '', $conf = array()) {
+	public function provinces($menuArr, $conf) {
 
 		global $TSFE;
-		$this->local_cObj = $TSFE->cObj; // cObject
 		$this->page_id = $GLOBALS['TSFE']->id;
 
+		// Get the provinces
 		$results = $this->getProvinces();
 
-		$content = '';
-		foreach ($results as $province) {
-			$link = $this->pi_linkTP($province['name'], array('tx_buechertransport_buechertransport[action]=show&tx_buechertransport_buechertransport[controller]=Province&tx_buechertransport_buechertransport[province]' => $province['uid']), 1);
-			$content .= '<li class="submenu-l1">' . $link . '</li>' . "\n";
+		$params = t3lib_div::_GP('tx_buechertransport_buechertransport');
+  	    $curPage = isset($params['province']) ? intval($params['province']) : -1;
+  
+		if(count($menuArr) > 0)	{
+			foreach ($results as $key => $province) {
+				$menuArr[$key]['title'] = $province['name'];
+				$menuArr[$key]['id'] = $province['uid'];
+				$menuArr[$key]['uid'] = $this->page_id;	
+				$menuArr[$key]['ITEM_STATE'] = 'NO';
+				if ($curPage == $province['uid']) {
+					$menuArr[$key]['ITEM_STATE'] = 'ACT';
+				}
+			}
 		}
-		// <a href="faecher-naturwissenschaften-mathematik-und-informatik/forstwissenschaften/datenbanken/" class="submenu-trigger">Datenbanken</a></li>
+		
+		// echo count($menuArr) . ' ';
+		// echo "<pre>";
+		// print_r($menuArr);
+		// echo "</pre>";
+		// print_r("<br>");
 
-		return $content;
+		return $menuArr;
+
+		// // Menue als String
+		// $content = ''; 
+		// foreach ($results as $key => $province) {
+		// 	$link = $this->pi_linkTP($province['name'], array('tx_buechertransport_buechertransport[action]=show&tx_buechertransport_buechertransport[controller]=Province&tx_buechertransport_buechertransport[province]' => $province['uid']), 1);
+		// 	if ($curPage == $province['uid']) {
+		// 		$params = array(
+		// 			'title' => $province['name'],
+		// 			'class' => "submenu-highlight-parent submenu-trigger"
+		// 		);
+		// 		$link = $this->local_cObj->addParams($link, $params);
+		// 		$content .= '<li class="submenu-l1 selected">' . $link . '</li>' . "\n";	
+		// 	}	else {
+		// 		$content .= '<li class="submenu-l1">' . $link . '</li>' . "\n";	
+		// 	}
+		// }
+		// return $content;
+
 	}
 
 	/**
